Create User Form / Backend Routes

--- a/tankify_backend/.env
+++ b/tankify_backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://marcus:USSKennedy23*@localhost:5432/tankify_db
+DATABASE_URL=postgresql://marcus:Civil392601*@localhost:5432/tankify
 SECRET_KEY = 'imasecret'
