--- a/tankify_backend/requirements.txt
+++ b/tankify_backend/requirements.txt
@@ -1,7 +1,19 @@
+bcrypt==4.2.0
 blinker==1.8.2
 click==8.1.7
+DateTime==5.5
 Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
+pytz==2024.2
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+uuid==1.30
 Werkzeug==3.0.4
+zope.interface==7.1.1
