--- a/tankify_backend/requirements.txt
+++ b/tankify_backend/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
 MarkupSafe==3.0.2
+pillow==11.0.0
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
