--- a/tankify-frontend/package.json
+++ b/tankify-frontend/package.json
@@ -16,6 +16,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "three": "^0.171.0",
+    "tsparticles": "^3.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
