--- a/tankify_backend/.gitignore
+++ b/tankify_backend/.gitignore
@@ -1,1 +1,19 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*.so
+
+# Virtual environment
+venv/
+
+# VS Code settings
+.vscode/
+
+# Mac system files
+.DS_Store
+
+# Logs and dumps
+*.log
+*.sqlite3
 .env 
+
